Fixed the stretch of the main chat
**Fixed the stretch of the main chat, to fit big screens.**

Fixed the stretch.

--- a/whatsapp-dark.user.css
+++ b/whatsapp-dark.user.css
@@ -1,13 +1,13 @@
 /* ==UserStyle==
 @name        WhatsApp Dark Contrasted
 @namespace   SpartanJ-5jubs
-@version     1.0.5
+@version     1.0.6
 @homepageURL https://github.com/5jubsPRO/WhatsApp-Dark
 @updateURL   https://raw.githubusercontent.com/5jubsPRO/WhatsApp-Dark/master/whatsapp-dark.user.css
 @license     CC0 - Public Domain
 @author      SpartanJ-5jubs
 ==/UserStyle== */
-/*! WhatsApp Dark v1.0.5 (2022-05-23) */
+/*! WhatsApp Dark v1.0.6 (2022-08-29) */
 /*! Repository: https://github.com/5jubsPRO/WhatsApp-Dark    */
 /*! License:    https://creativecommons.org/share-your-work/public-domain/cc0/ */
 @-moz-document domain("web.whatsapp.com") {
@@ -2206,6 +2206,7 @@
             margin: 0 0 0 0;
             top: 0px;
             width: 100%;
+			max-width: none;
             height: 100%;
         }
     }
